Fix tweet wrapping

--- a/_sass/_tweets.scss
+++ b/_sass/_tweets.scss
@@ -35,6 +35,5 @@
   }
 }
 .tweet-html {
-  white-space: pre-wrap;
   color: #777;
 }
